--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,13 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   
 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
     
-  <dependencies>
-  <dependency>
-   <groupId>sonataHotelData-id</groupId>
-    <artifactId>sonataHotelData-id</artifactId>
-    <version>0.0.1</version>
-    </dependency>
-  </dependencies>
+<repositories>
+		<repository>
+    <id>project-sonataupload</id>
+    <name>Project Sonataupload</name>
+    <url>https://github.com/udayaKumarUpload/uploadJarRepository/tree/master/</url>
+    </repository>  
+</repositories>      
+     
+      
 </project>  
